# ollama-shadow

./: .gitignore  CHANGELOG.txt  CONTRIBUTOR.md  README.md  RELEASE_v0.1.5-beta.md  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  project-routing.yml  python-app.yml
airecon/: __main__.py  logger.py
airecon/containers/: Dockerfile  settings.yml
airecon/proxy/: agent_graph.py  browser.py  caido_client.py  config.py  correlation.py  docker.py  filesystem.py  fuzzer.py  ollama.py  reporting.py  searxng.py  semgrep.py  server.py  subagent.py  system.py  web_search.py
airecon/proxy/agent/: __init__.py  agent_graph.py  executors.py  formatters.py  loop.py  models.py  output_parser.py  pipeline.py  session.py  subagent.py  tool_defs.py  validators.py  workspace.py
airecon/proxy/data/: attack_chains.json  business_logic_patterns.json  cve_correlations.json  expert_testing_patterns.json  fuzzer_data.json  port_correlations.json  skills.json  tech_correlations.json  tools.json  tools_meta.json  zeroday_patterns.json
airecon/proxy/prompts/: bugbounty.txt  penetration_test.txt  system.txt  (+1 more)
airecon/tui/: app.py  styles.tcss
docs/: README.md  configuration.md  features.md  installation.md  tools.md
docs/development/: creating_skills.md
ollama_shadow/: __init__.py  __main__.py  logger.py
ollama_shadow/containers/: Dockerfile  caido-setup  docker-entrypoint.sh  settings.yml
ollama_shadow/proxy/: __init__.py  browser.py  caido_client.py  config.py  correlation.py  docker.py  filesystem.py  fuzzer.py  ollama.py  reporting.py  searxng.py  semgrep.py  server.py  system.py  web_search.py
ollama_shadow/tui/: __init__.py  app.py  styles.tcss
tests/: conftest.py
tests/proxy/: test_browser.py  test_caido_client.py  test_config.py  test_correlation.py  test_ctf_detection.py  test_docker.py  test_fuzzer.py  test_ollama_capabilities.py  test_reporting.py  test_semgrep.py  test_semgrep_p3.py  test_system_skills.py  test_validation.py  test_web_search_p3.py
tests/tui/: test_app.py  test_widgets.py
(+114 files in other folders)
