[tool.poetry]
name = "ollama-shadow"
version = "0.1.0"
description = "Cloud-Powered Autonomous Penetration Testing Agent: Ollama Cloud + Kali Linux Docker sandbox + Textual TUI"
authors = ["devv-jr"]
readme = "README.md"
packages = [{include = "ollama_shadow"}]
include = [
    "ollama_shadow/proxy/skills/**/*.md",
    "ollama_shadow/containers/**/*",
    "ollama_shadow/proxy/data/**/*",
    "ollama_shadow/proxy/prompts/**/*"
]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^8.0.0"
httpx = "^0.28.1"
fastapi = "^0.133.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sse-starlette = "^3.2.0"
rich = "^14.3.0"
pydantic = "^2.12.5"
playwright = "^1.58.0"
ollama = "^0.6.1"
cvss = "^3.6"
duckduckgo-search = "^8.1.0"
aiohttp = "^3.9.0"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
textual-dev = "^1.7.0"
autopep8 = "^2.3.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"

[tool.poetry.scripts]
ollama-shadow = "ollama_shadow.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["ollama_shadow"]
# Exclude integration-heavy files that require Docker/Ollama/Playwright at runtime
omit = [
    "ollama_shadow/__main__.py",
    "ollama_shadow/logger.py",
    "ollama_shadow/proxy/server.py",
    "ollama_shadow/proxy/searxng.py",
    "ollama_shadow/proxy/agent_graph.py",
    "ollama_shadow/proxy/subagent.py",
    "ollama_shadow/proxy/browser.py",
    "ollama_shadow/proxy/ollama.py",
    "ollama_shadow/tui/*",
]

[tool.coverage.report]
# Current baseline: ~52%. Target: 70% (increase as test coverage grows).
# To raise threshold: write tests for executors.py, loop.py, filesystem.py.
fail_under = 52
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
